# Screen-Beam

./: Cargo.toml
client/: .gitignore  Cargo.toml
client/src/: config_store.rs  image_cache.rs  main.rs  mdns_discovery.rs  tokio_thread.rs
client/src/config_loader/: api_client.rs  mod.rs
client/src/renderer/: mod.rs  slides_state.rs  window.rs
client/src/renderer/pipeline/: mod.rs
client/src/renderer/pipeline/image_renderer/: mod.rs  texture.rs
client/src/renderer/pipeline/text_renderer/: mod.rs
server/: .gitignore  Cargo.toml
server/migrations/: 20240409170827_initial.sql  20240518140453_font_style.sql  20240930110910_slide_ordering.sql  20240930123300_layer_labels.sql
server/src/: main.rs  mdns.rs
server/src/api/: device_routes.rs  layer_routes.rs  mod.rs  screen_routes.rs  slide_routes.rs
server/src/db/: mod.rs
server/src/db/entities/: device.rs  image_layer.rs  mod.rs  screen.rs  slide.rs  text_layer.rs
server/src/db/queries/: mod.rs
server/src/db/queries/devices/: delete_device.sql  fetch_all_devices.sql  mod.rs  register_device.sql  register_device_monitor.sql  rename_device.sql  set_screen_on_monitor.sql  update_device.sql
server/src/db/queries/layers/: count_image_layers.sql  count_text_layers.sql  insert_image_layer.sql  insert_text_layer.sql  mod.rs  read_image_data.sql  update_image_data.sql  update_image_layer_label.sql  update_text_layer.sql
server/src/db/queries/screens/: delete_screen.sql  fetch_all_screens.sql  (+6 more)
server/src/handlers/: devices.rs  layers.rs  mod.rs  screens.rs  slides.rs
server/src/mappers/: mod.rs  slides.rs
(+92 files in other folders)
