[package]
name = "digital-signage-client"
version = "0.1.1"
edition = "2021"

[dependencies]
wgpu = "22.1"
winit = "0.29"
image = "0.25"
digital-signage-api = { path = "../api" }
serde = "1"
serde_json = "1"
serde_derive = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["fs", "rt", "net", "tracing", "parking_lot"] }
color-eyre = "0.6"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
hostname = "0.4"
pinboard = "2.2"
futures = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
uuid = "1.8"
parking_lot = "0.12"
glyphon = "0.6"
font-kit = "0.14"
flume = "0.11"
zeroconf = "0.15"
netdev = "0.31"
