[package]
name = "digital-signage-server"
version = "0.1.1"
edition = "2021"

[dependencies]
digital-signage-api = { path = "../api" }
zeroconf = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
color-eyre = "0.6"
axum = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
uuid = { version = "1.8", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "uuid"] }
itertools = "0.13"
serde = { version = "1.0.199", features = ["derive"] }
futures = "0.3"
